fix bug where an inline math element followed by a dot would be separated from the dot if the viewport was too narrow and it would look ugly - also add a new test to this effect and also remove some duplicated tests

--- a/rsm/static/rsm.css
+++ b/rsm/static/rsm.css
@@ -632,6 +632,12 @@
 }
 
 
+/* Inline math */
+/* Prevent math followed by a dot from being separated. */
+.manuscriptwrapper .inline-math-wrapper {
+  white-space: nowrap;
+}
+
 
 /* Other */
 .manuscriptwrapper .hr {
